assets/css/style.css
/* Imports Montserrat as the default font with sans-serif as a backup, taken from googlefonts. 
Also removes default border, padding and margins */

@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');

* {
    font-family: 'Montserrat', sans-serif;
    color: #003b49;
    margin: 0;
    padding: 0;
    border: 0;
}

/* nav bar styling */

header {
    position: relative;
    z-index: 2;
    width: 100%;
    height: 50px;
    background-color: white;
}

#title {
    text-transform: uppercase;
    font-weight: bolder;
    float: left;
    line-height: 50px;
    height: 50px;
    padding-left: 10px;
}

nav {
    float: right;
    font-size: 150%;
}

nav > a {
    text-decoration: none;
    font-weight: bold;
    padding-right: 10px;
    line-height: 50px;
    height: 50px;
}

nav a:hover {
    color: blue;
}

/* Hero Image */

#hero-container {
    height: 500px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image {
    height: 500px;
    width: 100%;
    background-image: url("../images/hero-image-pexels-pixabay-resized2.jpg");
    background-repeat: no-repeat;
    background-position: center center;
    background-color: white;
    background-size: cover;
}

#hero-text {
    text-transform: uppercase;
    text-align: center center;
    height: 100px;
    width: 250px;
    background-color: red;
    position: absolute;
    top: 15%;
    left: 15%;
    padding: 10px 0 0 10px;
}

#hero-text h2 {
    
}

/* About Us */

#about-us {
    column-count: 2;
    padding: 1em;
    text-align: justify;
}

#about-us-title {
    text-align: center;
    padding-bottom: 0.5em;
}

/* Meet Ups */

#meet-ups {
    background-image: url("../images/meet-image-pexels-tima-miroshnichenko.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
    overflow: hidden;
}

#meet-ups div {
    text-align: center;
    width: 33%;
    height: 400px;
    float: left;
    background-color: rgba(0, 0, 0, 0.5);
    padding-top: 1.5em;
}

#meet-ups h2,h3 {
    font-size: 140%;
    color: white;
    padding: 1em
}

#meet-ups h2 {
    text-transform: uppercase;
    font-weight: bolder;
}

#meet-ups i {
    color: yellow;
    padding: 0.4em;
}

/* Sign Up */

/* Footer styling */ 

footer {
    text-align: center;
    width: 100%;
    padding: 1em 0 1.2em 0;
}

footer > a {
    text-decoration: none;
    padding: 0 1.5em;
    font-size: 1.5em;
    font-weight: bold;
}

footer a:hover {
    color: blue;
}

/* Media queries for responsive sizing based on user device size */

